--- a/PlantillaOpenGL/PlantillaOpenGL.vcxproj
+++ b/PlantillaOpenGL/PlantillaOpenGL.vcxproj
@@ -153,19 +153,26 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Arbol.h" />
     <ClInclude Include="Carro.h" />
     <ClInclude Include="Carro2.h" />
     <ClInclude Include="Modelo.h" />
+    <ClInclude Include="Nube.h" />
+    <ClInclude Include="NubeFondo.h" />
     <ClInclude Include="Pista.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Tierra.h" />
     <ClInclude Include="Vertice.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Arbol.cpp" />
     <ClCompile Include="Carro.cpp" />
     <ClCompile Include="Carro2.cpp" />
     <ClCompile Include="Modelo.cpp" />
+    <ClCompile Include="Nube.cpp" />
+    <ClCompile Include="NubeFondo.cpp" />
     <ClCompile Include="Pista.cpp" />
     <ClCompile Include="PlantillaOpenGL.cpp" />
     <ClCompile Include="Shader.cpp" />
@@ -175,6 +182,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Tierra.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="FragmentShader.shader" />
