Te dice quien gana.

--- a/PlantillaOpenGL/PlantillaOpenGL.vcxproj
+++ b/PlantillaOpenGL/PlantillaOpenGL.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="Arbol.h" />
     <ClInclude Include="Carro.h" />
     <ClInclude Include="Carro2.h" />
+    <ClInclude Include="Gano.h" />
     <ClInclude Include="Modelo.h" />
     <ClInclude Include="Nube.h" />
     <ClInclude Include="NubeFondo.h" />
@@ -170,6 +171,7 @@
     <ClCompile Include="Arbol.cpp" />
     <ClCompile Include="Carro.cpp" />
     <ClCompile Include="Carro2.cpp" />
+    <ClCompile Include="Gano.cpp" />
     <ClCompile Include="Modelo.cpp" />
     <ClCompile Include="Nube.cpp" />
     <ClCompile Include="NubeFondo.cpp" />
