--- a/PlantillaOpenGL/PlantillaOpenGL.vcxproj.filters
+++ b/PlantillaOpenGL/PlantillaOpenGL.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="Semaforo.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Gano.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -96,6 +99,9 @@
       <Filter>Archivos de origen</Filter>
     </ClCompile>
     <ClCompile Include="Semaforo.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Gano.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
